# zelkova

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  install.sh
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/docs/: architecture.md
crates/cli/src/: commands.rs  main.rs
crates/config/: Cargo.toml
crates/config/docs/: architecture.md
crates/config/src/: keymap.rs  lib.rs  theme.rs  themes.rs
crates/config/themes/: alduin.json  asciinema.json  ayu.json  catppuccin.json  gruvbox.json  harper.json  hybrid.json  kibble.json  macos-classic.json  mellifluous.json  molokai.json  tokyonight.json
crates/daemon/: Cargo.toml
crates/daemon/docs/: architecture.md
crates/daemon/src/: handlers.rs  indexer.rs  main.rs  watcher.rs
crates/gui/: .gitignore  Cargo.toml
crates/gui/docs/: architecture.md  horizontal-scroll-survey.md  scroll-experiments.md
crates/gui/src/: command_palette.rs  keymap.rs  main.rs  pane.rs  preview.rs  tab.rs  theme.rs
crates/gui/src/editor/: highlight.rs  ime.rs  input.rs  mod.rs  render.rs  scroll_element.rs  util.rs
crates/gui/themes/: adventure.json  alduin.json  asciinema.json  ayu.json  catppuccin.json  debug-override.json  everforest.json  fahrenheit.json  gruvbox.json  harper.json  hybrid.json  jellybeans.json  kibble.json  macos-classic.json  matrix.json  mellifluous.json  molokai.json  solarized.json  spaceduck.json  tokyonight.json  twilight.json
crates/highlight/: Cargo.toml
crates/highlight/docs/: architecture.md
crates/highlight/src/: lib.rs  theme.rs
crates/markdown/: Cargo.toml
crates/markdown/docs/: architecture.md
crates/markdown/src/: ast.rs  block.rs  inline.rs  lib.rs  parser.rs
crates/math_render/: Cargo.toml
crates/math_render/src/: lib.rs
crates/note_core/: Cargo.toml
crates/note_core/docs/: architecture.md
crates/note_core/src/: directory.rs  lib.rs  note.rs  vault.rs
crates/rope/: Cargo.toml
crates/rope/docs/: architecture.md
crates/rope/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/docs/: architecture.md
crates/rpc/src/: client.rs  lib.rs  server.rs  types.rs
crates/search/: Cargo.toml
crates/search/docs/: architecture.md
crates/search/src/: lib.rs  tantivy_backend.rs
crates/search/src/engine/: mod.rs
docs/: architecture.md  guide.md
