[workspace]
members = [
    "crates/gui",
    "crates/daemon",
    "crates/cli",
    "crates/markdown",
    "crates/search",
    "crates/note_core",
    "crates/rpc",
    "crates/config",
    "crates/rope",
    "crates/highlight",
    "crates/math_render",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[workspace.lints.clippy]
unwrap_used = "deny"
let_underscore_untyped = "warn"
