[package]
name = "zelkova-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "zelkova-cli"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
uuid = { workspace = true }
zelkova-config = { path = "../config" }
zelkova-note-core = { path = "../note_core" }
zelkova-rpc = { path = "../rpc" }
libc = "0.2"

[lints]
workspace = true
