[package]
name = "zelkova-daemon"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "zelkovad"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zelkova-config = { path = "../config" }
zelkova-note-core = { path = "../note_core" }
zelkova-search = { path = "../search" }
zelkova-rpc = { path = "../rpc" }

[lints]
workspace = true
