[package]
name = "zelkova-highlight"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25.4"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
once_cell = "1"
zelkova-config = { path = "../config" }

[lints]
workspace = true
