[package]
name = "zelkova-note-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
