[package]
name = "zelkova-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
zelkova-note-core = { path = "../note_core" }

[lints]
workspace = true
