[package]
name = "zelkova-search"
version = "0.2.0"
edition = "2024"

[features]
default = ["tantivy"]
tantivy = ["dep:tantivy"]

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
zelkova-note-core = { path = "../note_core" }
tantivy = { version = "0.25", optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
